# tt-baremetal

./: .gitignore  DRAM_NUMA.md  Dockerfile  INSTALL.md  LABS_UNIFICATION_SCOPE.md  README.md  RESIDENT_GRID.md  TTMETAL_PLAN.md  baremetal_plan.md  kernel_design.json  l2cpu-copilot-plan.md  pyproject.toml  run_consolidation.sh  run_crt_only.sh  run_docs_and_crt.sh  scout_full.py  tenstorrent-tools_1.4.1_all.deb
crt/: sweep.py
docs/: SILICON_VF_MARGINING.md
frontend/: index.html  package-lock.json  package.json  ui-defaults.json  vite.config.js
l2cpu_kernels/: dumpstate.c  heartbeat.s  perf.c
scratchpad/: _vf_embed.json  arc_calib.py  barrier_diag.py  bench_exalens.py  debug_vmin.py  diag0_recip_stages.py  diag5_convergence.py  dma_probe.py  gap1_check_c.py  gap1_check_projh.py  gap1_proj  gap1_proj.c  gap1_proj_golden.py  gap2_bin_golden.py  grid_telemetry_48.json  migration_profiler.html  multitile_render.py  orch_grid_telemetry_48.json  probe_adam_state.py  probe_stage2_mac.py  profile_real.py  proj_h_hosttest  proto_dLda_device.py  shmoo_fp.json  stage2_numeric.py  telemetry_1600.json  telemetry_256.json  test_baremetal_trainer.py  test_gap0_ab.py  test_gap0_cgon.py  test_gap0_dbusdiff.py  test_gap0_destcg.py  test_gap0_mmelw_multiring.py  test_gap0_sfpubin.py  test_gap0_wedge.py  test_gap1_whiten.py  test_gap2_bin.py  test_gap5_cache.py  test_handshake.py  test_het_produce.py  (+25 more)
scripts/: l2cpu_bringup.py  l2cpu_dram_probe.py  l2cpu_redirect.py  l2cpu_rnmi_smoketest.py  l2cpu_xport_diag.py  probe_dram.py  probe_dram_addr.py  probe_l2cpu_rnmi.py  scout_layout.py  (+3 more)
(+313 files in other folders)
